# Stats_That_Make_Data_Speak

./: .gitignore  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/workflows/: tests.yml
applied/case-studies/discount-vs-retention/: analysis.ipynb  analysis.py
applied/case-studies/restaurant-tipping-behavior/: README.md  analysis.ipynb  analysis.py
applied/case-studies/screen-time-vs-productivity/: analysis.ipynb  analysis.py
applied/notebooks/: 01-what-does-sales-data-look-like.ipynb  02-customer-spending-patterns.ipynb  03-what-drives-sales.ipynb  04-predicting-customer-spend.ipynb  04-predicting-customer-spend.py  05-do-discounts-work.ipynb  05-do-discounts-work.py  06-who-are-best-buyers.ipynb  07-is-campaign-working.ipynb  07-is-campaign-working.py  collaborative_peer_validation.ipynb
applied/signature-project/notebooks/: customer_analytics.ipynb  customer_analytics.py
applied/signature-project/outputs/: report.md
dashboard/: interactive_dashboard.py
data/: DATA_README.md
src/stats_series/: data_loader.py
tests/: test_data_ingestion.py
