[tool.poetry]
name = "stats-series"
version = "1.0.0"
description = "A structured statistics portfolio and analysis library in Python."
authors = ["Sanman Kadam (StatSphere)"]
readme = "README.md"
packages = [{include = "stats_series", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scipy = "^1.10.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
omit = [
    "src/stats_series/precompute_aggregations.py",
]
